contacts fixed
